--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body{
     background-color: rgb(239, 252, 249);
     font-family: 'Inter', sans-serif;
     font-weight: 500;
-    position: relative;
+    
+    overflow-x: hidden;
     
     
     
