--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body{
 nav{
     text-align: right;
     margin-top: 3%;
+    width: 48%;
+    margin-left: 47%;
     
    
     
@@ -109,8 +111,9 @@ p{
 .heading2 {
 
     margin:5% 6%;
-    border: transparent;
-    width: 30%;
+    border: solid transparent;
+    width: 50%;
+    height: 100%;
     margin-left: 6%;
     padding-bottom: 0%;
     margin-bottom: 10%;
@@ -127,26 +130,34 @@ p{
 .content2{
     
     border: solid rgb(204, 228, 224);
-    width: 25%;
+    width: 30%;
     height: 10%;
     border-width: 60px;
     border-radius: 50%;
-    margin-left: 60%;
+    margin-left: 53%;
     margin-top:-36%;
     margin-bottom: none;
     
 }
 
 
-.first{
-   /* margin: 0% -40% 0% 6%;
+/*.first{
+    margin: 0% -40% 0% 6%;
    margin-left: 6%;
-   margin-bottom: 10%;*/
-   margin-right: 88%;
-  
+   margin-bottom: 10%;
+   border: solid transparent;
+   display: flex;
+  }
+.first p{
+    font-size: 20px;
+    color:rgb(51, 163, 163) ;
+    
 }
+.first h3{
+    
+}*/
 .heading2 h1{
-    font-size: 37px;
+    font-size: 49px;
     color:rgb(59, 60, 78);
 }
 
@@ -156,15 +167,19 @@ p{
 }
 
 .heading2 button{
-    width: 128px;
+    width: 160px;
     height: 40px;
-    background-color: rgb(51, 163, 163);
-    border-radius: 14%;
-    border:solid rgb(51, 163, 163);
+        background-color: rgb(51, 163, 163);
+        border-radius: 14%;
+        border:solid rgb(51, 163, 163);
+        color: white;
+        font-size:20px;
+        padding-bottom: 2%;
 }
 button{
     color: white;
-    font-size:15px;
+    font-size:18px;
+    padding-top: 1%;
     
 }
 /*.triangle{
@@ -316,6 +331,7 @@ button{
         height: 300px;
         
         padding:5px;
+        margin-bottom: 6%;
     }
 
     .box4{
@@ -409,13 +425,14 @@ button{
      }
 
      .text button{
-        width: 150px;
-    height: 50px;
+        width: 160px;
+    height: 60px;
         background-color: rgb(51, 163, 163);
         border-radius: 14%;
         border:solid rgb(51, 163, 163);
         color: white;
         font-size:20px;
+        padding-bottom: 2%;
      }
      .vetyy{
         margin-left: 6%;
@@ -429,16 +446,19 @@ button{
     width:98%;
     margin-left: 100px;
     margin-top: 10%;
+    height:10%;
+    
 
 }
 .text h1{
-    color: rgb(59, 60, 78);
+    color: rgb(68, 65, 65);
     font-weight: bolder;
     font-size: 35px;
 }
 .text h4{
-    font-size:20px;
-    color:rgb(99, 101, 131);
+    color:rgba(61, 67, 88, 0.733);
+        font-weight: 500;
+        font-size: 17px;
 }
 .image{
     border: solid rgb(201, 230, 247);
@@ -457,9 +477,8 @@ button{
 
      .Theer{
          border: solid transparent;
-         
-         background-color:rgb(224, 250, 242);
-     }
+         margin-bottom: 6%;
+    }
 
      
     
@@ -523,6 +542,7 @@ margin-left: 5%;
     display: flex;
     
     margin-bottom:180px;
+    margin-bottom: 13%;
 
 }
 .boxx{
@@ -592,7 +612,7 @@ margin-left: 5%;
 .rowtitle{
     display: flex;
     border:solid transparent;
-    margin-bottom:1%;
+    
 }
 
 .rowtitle h1{
@@ -707,7 +727,7 @@ font-weight: bolder;
     border: solid transparent;
     width:30%;
     margin-top:-20%;
-    margin-left:37%;
+    margin-left:35%;
     color:rgb(37, 38, 61);
 }
 
@@ -729,10 +749,10 @@ font-weight: bolder;
 
 }
 .form-input p{
-    margin-left: 3%;
+    margin-left: 5%;
     font-size: 20px;
     color: rgb(37, 38, 61);
-    font-weight: lighter;
+    font-weight: 390;
     margin-bottom: -1%;
 }
 .button{
@@ -802,14 +822,10 @@ font-weight: bolder;
 .pro3 p{
    color: rgba(61, 67, 88, 0.733); 
 }
-.stars{
-    margin-left: 13%;
-    margin-top: 10%;
-    color: orange;
-}
+
 .numbers{
     margin-left: 18%;
-    margin-top: -6%;
+    margin-top: -30%;
     
 }
 .numbers p{
@@ -817,13 +833,15 @@ font-weight: bolder;
 }
 
 .stars2{
-    margin-left: 13%;
-    margin-top: 10%;
+    margin-left: 19%;
+    margin-top: -28%;
     color: orange;
+    
 }
 .numbers2{
-    margin-left: 18%;
+    margin-left: 25%;
     margin-top: -6%;
+    
     
 }
 .numbers2 p{
@@ -847,68 +865,33 @@ font-weight: bolder;
     margin-left: 20px;
 }
 .Google{
-    background-color: white;
+    background-color: rgb(239, 252, 249);
     color: red;
     margin-left: 20px;
 }
 .LinkedIn{
     color:rgb(27, 121, 228);
-    background-color: white;
+    background-color: rgb(239, 252, 249);
     padding-left:20px;
 
     
 }
 
 .playIcon{
+    display: flex;
 color: rgb(21, 158, 158);
 background-color: rgb(239, 252, 249);
-font-size: 40px;
-margin-left: 35%;
+
 margin-bottom: -12%;
 }
-.icon1{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
+
+.start{
+    padding-left:3%;
+    font-size: 41px;
+    padding-bottom: 5%;
+
 }
 
-.icon2{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
-}
-.icon3{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
-}
-.icon4{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
-}
-.icon5{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
-}
-.icon6{
-    font-size: 40px;
-    color: rgb(21, 158, 158);
-    margin-left: 9%;
-    margin-top: 14%;
-    
-}
 .quotex{
     font-size: 60px;
     color: rgb(193, 231, 231);
@@ -921,6 +904,17 @@ margin-bottom: -12%;
     color: rgb(193, 231, 231);
     margin-left: 12%; 
     margin-top: 11%;
+   
+}
+.cm{
+    display: flex;
+    color: rgb(73, 175, 175);
+  
+}
+
+.cm h4{
+    margin-left: 40%;
+    margin-top: 9%;
 }
 
 .photo{
@@ -928,13 +922,41 @@ margin-bottom: -12%;
     width: 8%;
     background-color: rgb(197, 210, 216);
     border-radius: 50%;
+    height: 1%;
+    margin-top: 3%;
 }
+.name{
+    margin-left: 2%;
+}
+.name p{
+    margin-left:21%;
+    margin-top:-4%;
 
+}
+.name h4{
+    color:rgb(37, 38, 61);
+    margin-bottom: 1%;
+   
+
+}
 .comment{
     display: flex;
     margin-top: -25%;
     margin-left: 13%;
 }
+
+.icon1,.icon2,.icon3,.icon4,.icon5,.icon6 {
+    padding:18px;
+    border-radius: 50%;
+    color:rgb(26,160,171);
+    background-color:   rgb(233,250,252);
+    width: 4%;
+    margin-left: 7%;
+    margin-top: 14%;
+}
+
+
+
 
     
 
