--- a/style.css
+++ b/style.css
@@ -12,17 +12,24 @@ body{
 
 nav{
     text-align: right;
-    margin-top: 3%;
+    /* margin-top: 3%; */
     width: 48%;
     margin-left: 47%;
+    margin-top: -3%;
+  
+   
+}
+
+ .firstline{
+     margin-left: 6%;
+     margin-top: 3%;
+     font-size: larger;
+     color:rgb(59, 60, 78);
+     font-weight: bolder;
     
    
-    
-  
-  
-  
 }
-nav ul li{
+nav ul li {
     list-style: none;
     display: inline;
     font-size: 20px;
@@ -33,6 +40,7 @@ nav ul li{
     
     
 }
+
 nav ul li a{
     color:rgb(94, 92, 92);
     text-decoration: none;
@@ -134,8 +142,8 @@ p{
     height: 10%;
     border-width: 60px;
     border-radius: 50%;
-    margin-left: 53%;
-    margin-top:-36%;
+    margin-left: 54%;
+    margin-top:-38%;
     margin-bottom: none;
     
 }
@@ -164,6 +172,7 @@ p{
 .heading2 p{
     font-size: 18px;
     color: rgb(99, 101, 131);
+    
 }
 
 .heading2 button{
@@ -451,12 +460,12 @@ button{
 
 }
 .text h1{
-    color: rgb(68, 65, 65);
+    color: rgb(59, 60, 78);
     font-weight: bolder;
     font-size: 35px;
 }
 .text h4{
-    color:rgba(61, 67, 88, 0.733);
+    color:rgb(99, 101, 131);
         font-weight: 500;
         font-size: 17px;
 }
@@ -826,6 +835,7 @@ font-weight: bolder;
 .numbers{
     margin-left: 18%;
     margin-top: -30%;
+   
     
 }
 .numbers p{
@@ -833,14 +843,16 @@ font-weight: bolder;
 }
 
 .stars2{
-    margin-left: 19%;
+    margin-left: 14%;
     margin-top: -28%;
     color: orange;
     
+    
 }
 .numbers2{
-    margin-left: 25%;
+    margin-left: 19%;
     margin-top: -6%;
+    font-size: 2px;
     
     
 }
@@ -883,6 +895,7 @@ color: rgb(21, 158, 158);
 background-color: rgb(239, 252, 249);
 
 margin-bottom: -12%;
+padding-top: 5%;
 }
 
 .start{
@@ -918,9 +931,9 @@ margin-bottom: -12%;
 }
 
 .photo{
-    border: solid rgb(197, 210, 216);
+    border: solid rgb(142, 197, 221);
     width: 8%;
-    background-color: rgb(197, 210, 216);
+    background-color: rgb(142, 197, 221);
     border-radius: 50%;
     height: 1%;
     margin-top: 3%;
